--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Build & Push image
         uses: docker/build-push-action@v5
         with:
-          context: ./Backend            # (đổi nếu Dockerfile ở nơi khác)
-          file: ./Backend/Dockerfile    # (đổi nếu tên/đường dẫn khác)
+          context: ./Backend            # Đổi nếu Dockerfile nằm chỗ khác
+          file: ./Backend/Dockerfile    # Đổi nếu tên/đường dẫn khác
           push: true
           tags: |
             ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
@@ -57,27 +57,25 @@ jobs:
             set -euo pipefail
 
             # ---------- cấu hình ----------
-            REPO_SSH="${REPO_SSH:-git@github.com:LongIT2007/coffeeshop.git}"
-            APP_DIR="${APP_DIR:-$HOME/coffeeshop}"
+            REPO_SSH="${REPO_SSH:-git@github.com:Trinh1112/deloy-website.git}"
+            APP_DIR="${APP_DIR:-$HOME/deloy-website}"
 
             # ---------- chuẩn bị SSH để pull repo qua SSH ----------
             mkdir -p ~/.ssh
             chmod 700 ~/.ssh
-            # Ghi private deploy key từ secret vào file
             if [ -n "${GH_DEPLOY_KEY:-}" ]; then
               echo "${GH_DEPLOY_KEY}" > ~/.ssh/id_ed25519
               chmod 600 ~/.ssh/id_ed25519
               cat > ~/.ssh/config <<'EOF'
-              Host github.com
-                HostName github.com
-                User git
-                IdentityFile ~/.ssh/id_ed25519
-                IdentitiesOnly yes
-              EOF
+Host github.com
+  HostName github.com
+  User git
+  IdentityFile ~/.ssh/id_ed25519
+  IdentitiesOnly yes
+EOF
               chmod 600 ~/.ssh/config
-              # Thêm known_hosts để khỏi hỏi interactive
               ssh-keyscan -H github.com >> ~/.ssh/known_hosts 2>/dev/null || true
-              chmod 644 ~/.ssh/known_hosts
+              chmod 644 ~/.ssh/known_hosts || true
             fi
 
             # ---------- sync code ----------
@@ -88,12 +86,10 @@ jobs:
               cd "$APP_DIR"
             else
               cd "$APP_DIR"
+              git fetch --all --prune
+              git reset --hard origin/main
+              git clean -fd -e .env
             fi
-
-            # reset về origin/main, giữ lại .env
-            git fetch --all --prune
-            git reset --hard origin/main
-            git clean -fd -e .env
 
             # ---------- login Docker Hub (nếu có secret) ----------
             if [ -n "${DH_USER:-}" ] && [ -n "${DH_TOKEN:-}" ]; then
@@ -101,18 +97,14 @@ jobs:
             fi
 
             # ---------- deploy ----------
-            # Kéo image mới (nếu có)
             docker compose pull || true
-            # Khởi động/ cập nhật container, không xoá file ngoài compose
             docker compose up -d --pull always --remove-orphans
-            # Dọn image lạc mồ côi
             docker image prune -f || true
-            # In trạng thái
             docker compose ps
     env:
-      # Cho phép chỉnh qua repo secrets (tùy)
-      REPO_SSH: ${{ secrets.REPO_SSH }}   # nếu không set, dùng mặc định ở script
-      APP_DIR: ${{ secrets.APP_DIR }}     # ví dụ: /home/ubuntu/coffeeshop
+      # Có thể override bằng Secrets nếu muốn
+      REPO_SSH: ${{ secrets.REPO_SSH }}     # ví dụ repo SSH khác
+      APP_DIR: ${{ secrets.APP_DIR }}       # ví dụ: /home/ubuntu/deloy-website
       DH_USER: ${{ secrets.DH_USER }}
       DH_TOKEN: ${{ secrets.DH_TOKEN }}
       GH_DEPLOY_KEY: ${{ secrets.GH_DEPLOY_KEY }}
