--- a/Backend/coffeeshop/src/main/resources/application.properties
+++ b/Backend/coffeeshop/src/main/resources/application.properties
@@ -1,31 +1,28 @@
+# -------- APP INFO --------
 spring.application.name=coffeeshop
+
+# -------- DATABASE --------
 spring.datasource.url=jdbc:mysql://localhost:3306/coffeeshop
-spring.datasource.username=longngon123
-spring.datasource.password=Long1234@
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+# -------- MANAGEMENT --------
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
 server.address=0.0.0.0
 server.port=8099
 
-# JWT Secret Key (change in production)
-jwt.secret=3fC9!$2fL8@B7wzQ9rT1eMxNpK#vH7yL
-jwt.expiration=86400000
-jwt.refreshExpiration=3600000
+# -------- JWT --------
+jwt.secret=${JWT_SECRET:defaultSecretKey}
+jwt.expiration=${JWT_EXPIRATION:86400000}
+jwt.refreshExpiration=${JWT_REFRESH_EXPIRATION:3600000}
 
-cloudinary.cloud-name=diia1p9ou
-cloudinary.api-key=682326571379666
-cloudinary.api-secret=4yXp4WgG2kRGAkMTDYk0AYj3f24
-
-# Multipart file upload limits
-spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=10MB
-spring.servlet.multipart.enabled=true
-
-paypal.client-id=AQ4Tz50UJOTyoEanFW1Rf49dCxVWB7TL4yg8uEg_2EtGXO7-p6GL7DdpTi74Fa9isEoYmP9m8Ozv5BCn
-paypal.client-secret=EHyB0bVcbmwKvUolv6qm4p7hFczPqCeBOgPyEo__-ntMstg6JEIYKsOEhgB0y-eC-5cD9V2aGXfP9Wqb
-paypal.mode=sandbox  
+# -------- LOGGING --------
 logging.level.org.springframework.security=DEBUG
+
+# -------- CORS --------
+# Bạn có thể map ALLOWED_ORIGINS trong code bằng @Value
+allowed.origins=${ALLOWED_ORIGINS:http://localhost:3000}
